==> cprastyawan/F407-EFALCON/Core/Src/HMC5883L.c <==
#include "HMC5883L.h"

void HMC5883L_I2C_ByteWrite(HMC5883L_t *hmc5883l, uint8_t* pBuffer, uint8_t WriteAddr)
{
//  ENTR_CRT_SECTION();

  /* Send START condition */
  //I2C_GenerateSTART(HMC5883L_I2C, ENABLE);


  /* Test on EV5 and clear it */
  //while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_MODE_SELECT));

  /* Send HMC5883 address for write */
  //I2C_Send7bitAddress(HMC5883L_I2C, slaveAddr, I2C_Direction_Transmitter);
  HAL_I2C_Mem_Write(hmc5883l->hi2c, hmc5883l->address, WriteAddr, 1, pBuffer, 1, 100);


  /* Test on EV6 and clear it */
  //while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED));

  /* Send the HMC5883L internal address to write to */
  //I2C_SendData(HMC5883L_I2C, WriteAddr);

  /* Test on EV8 and clear it */
  //while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED));

  /* Send the byte to be written */
  //I2C_SendData(HMC5883L_I2C, *pBuffer);

  /* Test on EV8 and clear it */
  //while(!I2C_CheckEvent(HMC5883L_I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED));

  /* Send STOP condition */
  //I2C_GenerateSTOP(HMC5883L_I2C, ENABLE);
 // EXT_CRT_SECTION();

}

void HMC5883L_I2C_BufferRead(HMC5883L_t *hmc5883l, uint8_t* pBuffer, uint8_t ReadAddr, uint16_t NumByteToRead)
{
 // ENTR_CRT_SECTION();

  /* While the bus is busy */
  while(HAL_I2C_GetState(hmc5883l->hi2c) == HAL_I2C_STATE_BUSY);

  /* Send START condition */
  HAL_I2C_Mem_Read(hmc5883l->hi2c, hmc5883l->address, ReadAddr, 1, pBuffer, NumByteToRead, 100);
}
